--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/5587893eae.js" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>Let's Play the Game !!!</title>
+    <title>Mr.Aggard</title>
 </head>
 
 <body class="screen main">
@@ -111,5 +111,5 @@
     <script src="script.js"></script>
 
 </body>
-<p>1</p>
+    
 </html>
