--- a/assets/main.html
+++ b/assets/main.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/5587893eae.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>Let's Play the Game !!!</title>
+    <title>Mr.Aggard</title>
 </head>
 
 <body oncontextmenu="return false;">
@@ -34,7 +34,6 @@
             <img src="images/mainlogo.png" width="80px" height="60px" />
 
         </div>
-
 
         <div class="innerDiv">
             <button class="btn" id="instruction-btn" onclick="showInstructions()">
