--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
     </svg>
 
     <script src="script.js"></script>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0.000001; URL=https://mmmmmmi728y98.github.io/click-the-fruit-or-vegetable/assets/main.html
+" />
 
+  </head>
+  <body>
+  </body>
+<html>
 </body>
 
 </html>
