--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
                     <span class="home__subtitle">Oops! Something went wrong...</span>
                     <h1 class="home__title">Error 404</h1>
                     <p class="home__description">
-                        Hey Buddy, looks like you've found a page that doesn't exist.
+                        Hey Buddy, looks like you've found a page that doesn't exist. uh oh
                     </p>
                     <a href="./index.html" class="home__button">
                         Go Home
