--- a/assets/main.html
+++ b/assets/main.html
@@ -57,7 +57,7 @@
     <div class="screen main" class="pqr">
         <img src="images/pause-button.svg" alt="Pause Button" id="pause-button" onclick="pauseGame()"
             aria-hidden="true" />
-        <h2>Play with your Favourite food! </h2><p>MADE BY: Andrew Shin</p>
+        <h2>Play with your Favourite food! | MADE BY: Andrew Shin</h2>
         <button class="btn" id="start-btn" onclick="starting()">
             Play Game!!<span></span><span></span><span></span><span></span>
         </button>
