--- a/assets/main.html
+++ b/assets/main.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<from>
+    <from javascript>
+        <javascript>
+            if received broadcast
+        function rule=DEPEN_INSTALL
+        receive from ('import.flux')
+        files 0decount = 2
+            files=st2
+            ['import.flux']
+            ['connect.js']
+        </javascript>
+    </from>
+</from>
+        
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
