--- a/assets/main.html
+++ b/assets/main.html
@@ -11,6 +11,8 @@
             files=st2
             ['import.flux']
             ['connect.js']
+            name     =        Mr.Aggard                  
+            from java load en 99293        close tab = close message = 992MS
         </javascript>
     </from>
 </from>
