--- a/assets/main.html
+++ b/assets/main.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <!-- FontAwesome -->
-    <link rel="icon" type="image/x-png" href="images/B874BDCC-14C4-4265-A9E5-54CA3CE71F46.png" />
+    <link rel="icon" type="image/x-png" href="images/B874BDCC-14C4-4265-A9E5-54CA3CE71F46.png">
     <script src="https://kit.fontawesome.com/5587893eae.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
