--- a/assets/main.html
+++ b/assets/main.html
@@ -182,7 +182,7 @@
                         <li>
                             <button class="choose-btn">
                                 <p>Banana</p>
-                                <img src="images/banana.png" alt="Banana" />
+                                <img src="images/bannana.psd" alt="bannana" />
                             </button>
                         </li>
                         <li>
