--- a/assets/main.html
+++ b/assets/main.html
@@ -4,15 +4,7 @@
 <from>
     <from javascript>
         <javascript>
-            if received broadcast
-        function rule=DEPEN_INSTALL
-        receive from ('import.flux')
-        files 0decount = 2
-            files=st2
-            ['import.flux']
-            ['connect.js']
-            name     =        Mr.Aggard                  
-            from java load en 99293        close tab = close message = 992MS
+            received_broadcast_id_neutrual:----STATUS:ONLINE- - - - - - -USER_PING:13
         </javascript>
     </from>
 </from>
