--- a/assets/main.html
+++ b/assets/main.html
@@ -174,13 +174,13 @@
                         <li>
                             <button class="choose-btn">
                                 <p>Banana</p>
-                                <img src="images/bannana.psd" alt="bannana" />
+                                <img src="images/banana.psd" alt="bannana" />
                             </button>
                         </li>
                         <li>
                             <button class="choose-btn">
                                 <p>Grapes</p>
-                                <img src="images/grapes.png" alt="Grapes" />
+                                <img src="images/grape.png" alt="Grapes" />
                             </button>
                         </li>
                         <li>
