--- a/assets/main.html
+++ b/assets/main.html
@@ -174,7 +174,7 @@
                         <li>
                             <button class="choose-btn">
                                 <p>Banana</p>
-                                <img src="images/banana.psd" alt="bannana" />
+                                <img src="images/banana.psd" alt="Banana" />
                             </button>
                         </li>
                         <li>
