--- a/assets/main.html
+++ b/assets/main.html
@@ -5,6 +5,30 @@
     <from javascript>
         <javascript>
             received_broadcast_id_neutrual:----STATUS:ONLINE- - - - - - -USER_PING:13
+            fetching DATA from ('https://www.github.com/as90909w/2834.dvb.2.data/installer')
+            installing ['MAIN']
+            coding_status: online
+            >>>install from .sh
+            >>>bash! !COMMAND!=[npm run start]
+            >loading...
+            >loading shell UXMW files...
+            >loading cahce of 1992.3 bites
+            >system x- chromnix share?utp android_preferences.2(3loader)
+            >logs: UNACTIVE
+            >results_start
+            >>>results:
+            System Shared Libraries: android.ext.services, android.ext.shared, android.test.base, android.test.mock, android.test.runner, com.android.location.provider, com.android.media.remotedisplay, com.android.mediadrm.signer, com.google.android.chromeos, com.google.android.gms, javax.obex, org.apache.http.legacy, org.chromium.arc, org.chromium.arc.bridge, org.chromium.arc.mojom
+            Supported Native Platforms / CPU Types: x86_64, x86, arm64-v8a, armeabi-v7a, armeabi
+            Supported Locales: af, af-ZA, am, am-ET, ar, ar-EG, ar-IL, ar-XB, as, az, be, bg, bg-BG, bn, bs, ca, ca-ES, cs, cs-CZ, da, da-DK, de, de-AT, de-CH, de-DE, de-LI, el, el-GR, en, en-AU, en-CA, en-GB, en-IE, en-IN, en-NZ, en-SG, en-US, en-XA, en-XC, en-ZA, es, es-ES, es-US, et, eu, fa, fa-IR, fi, fi-FI, fil, fil-PH, fr, fr-BE, fr-CA, fr-CH, fr-FR, gl, gu, hi, hi-IN, hr, hr-HR, hu, hu-HU, hy, in, in-ID, is, it, it-CH, it-IT, iw, iw-IL, ja, ja-JP, ka, kk, km, kn, ko, ko-KR, ky, lo, lt, lt-LT, lv, lv-LV, mk, ml, mn, mr, ms, ms-MY, my, nb, nb-NO, ne, nl, nl-BE, nl-NL, or, pa, pl, pl-PL, pt, pt-BR, pt-PT, rm, rm-CH, ro, ro-RO, ru, ru-RU, si, sk, sk-SK, sl, sl-SI, sq, sr, sr-Latn, sr-RS, sv, sv-SE, sw, sw-TZ, ta, te, th, th-TH, tr, tr-TR, uk, uk-UA, ur, uz, vi, vi-VN, zh-CN, zh-HK, zh-TW, zu, zu-ZA
+            Supported OpenGL Extensions: GL_ANDROID_extension_pack_es31a, GL_ANGLE_texture_compression_dxt3, GL_ANGLE_texture_compression_dxt5, GL_OES_vertex_array_object, GL_OES_vertex_half_float, GL_OES_viewport_array
+            Number Of Available Processors: 4
+            Secure Screenlock Available: false
+            Total Memory: 3990437888 Bytes
+            Low Ram Device: false
+            Maximum APK Download Size: 50 MB
+            System Available Features:
+            Feature	Version 2.3.41
+
         </javascript>
     </from>
 </from>
